# Companion-agentic-worflow

./: .gitignore  README.md  render.yaml  vercel.json
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/data/manifests/: manifest.json
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/data/samples/: README.md
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/data/schema/: analysis_schema.json  column_aliases.json  excel_columns.md
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/docs/: architecture.md  report_template.md
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/src/agents/: orchestrator.py
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/src/app/: main.py
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/src/core/: config.py  types.py
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/src/imaging/: dicom_utils.py  orthanc_utils.py
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/src/pipelines/: clinical_validation.py  compute_analysis.py  dicom_analysis.py  dicom_utils.py  parsers.py  (+6 more)
Hackathon-agentic-Healthcare-main/Hackathon-agentic-Healthcare-main/tests/: test_clinical_validation.py  test_compute_analysis.py  test_dicom_series.py  test_e2e_pipeline.py  test_generate_report.py  test_ingest_dicom.py  test_llm_enrichment.py  test_parsers.py
(+64 files in other folders)
