[project]
name = "hackathon-agentic-healthcare"
version = "0.1.0"
description = "Agentic AI pipeline for automated medical report generation"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # AI / Agents
    "anthropic>=0.40.0",
    # Data ingestion
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pillow>=10.4.0",
    "pydicom>=2.4.0",
    # Validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "jsonschema>=4.23.0",
    "numpy>=1.26.0",
    # Reporting
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
    "markdown>=3.6",
    # Visualization
    "plotly>=5.23.0",
    "streamlit>=1.37.0",
    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
